# radar-qpe-max

./: .dockerignore  .gitignore  Containerfile  Dockerfile  LICENSE.txt  README.md  pyproject.toml
src/maksitiirain/: __init__.py  ui.py
src/qpemax/: __init__.py  callbacks.py  cli.py  logs.py
src/sademaksit/: __init__.py  ui.py
src/scripts/: debug_precip_grid.py  maxit_dev.py
tests/: __init__.py  test_qpemax.py  test_sademaksit.py
