[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "maksitiirain"
description = 'QPE statistical indicators over moving temporal windows'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ['radar', 'precipitation']
authors = [
  { name = "Jussi Tiira", email = "jussi.tiira@fmi.fi" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "rioxarray",
  "radproc @ git+https://github.com/fmidev/radproc.git",
]
dynamic = ["version"]

[project.urls]
Issues = "https://github.com/fmidev/sademaksit/issues"
Source = "https://github.com/fmidev/sademaksit"

[project.scripts]
maksitiirain = "maksitiirain.ui:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/maksitiirain/_version.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=maksitiirain --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.metadata]
allow-direct-references = true
